[workspace]
members = [
    "api",
    "cloud-relay",
    "crdt",
    "tlfsc",
    ".",
]

[package]
name = "tlfs"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
anyhow = "1.0.44"
async-trait = "0.1.51"
bytecheck = "0.6.5"
ed25519-dalek = "1.0.1"
fnv = "1.0.7"
futures = "0.3.17"
libp2p-broadcast = "0.7.0"
log-panics = "2.0.0"
rkyv = "0.7.19"
tlfs-crdt = { version = "0.1.0", path = "crdt" }
tracing = "0.1.29"
tracing-log = "0.1.2"
tracing-subscriber = "0.2.25"

[dependencies.libp2p]
version = "0.41"
default-features = false
features = [
    "dns-async-std",
    "gossipsub",
    "mplex",
    "noise",
    "ping",
    "request-response",
    "tcp-async-io",
    "yamux",
    "websocket"
]

[dev-dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-global-executor = "2.0.2"

[patch.crates-io]
#ffi-gen = { path = "../ffigen" }
#ffi-gen-macro = { path = "../ffigen/macro" }
ffi-gen = { git = "https://github.com/cloudpeers/ffi-gen", branch = "master" }
ffi-gen-macro = { git = "https://github.com/cloudpeers/ffi-gen", branch = "master" }
