[workspace]
members = [
    "api",
    "cloud-relay",
    "crdt",
    "tlfsc",
    ".",
]

[package]
name = "tlfs"
version = "0.1.0"
edition = "2021"
description = "The Local First SDK"
repository = "https://github.com/cloudpeers/tlfs"
license = "MIT"

[profile.release]
lto = true

[dependencies]
anyhow = "1.0.51"
async-trait = "0.1.52"
bytecheck = "0.6.7"
ed25519-dalek = "1.0.1"
fnv = "1.0.7"
futures = "0.3.17"
libp2p-broadcast = "0.7.0"
libp2p-webrtc = "0.2.0"
log-panics = "2.0.0"
rkyv = "0.7.26"
tlfs-crdt = { version = "0.1.0", path = "crdt" }
tracing = { version = "0.1.29", default-features = false }
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.3", default-features = false, features = ["env-filter", "fmt"] }

[dependencies.libp2p]
version = "0.41.0"
default-features = false
features = [
    "mdns",
    "noise",
    "ping",
    "request-response",
    "tcp-async-io",
    "yamux",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.28"

[target.'cfg(target_arch = "wasm32")'.dependencies.libp2p]
version = "0.41"
default-features = false
features = [
    "wasm-bindgen",
    "wasm-ext-websocket"
]

[dev-dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-global-executor = { version = "2.0.2", features = ["tokio"] }

[target.'cfg(target_os = "android")'.dependencies]
tracing-android = "0.1.6"

[patch.crates-io]
libp2p = { git = "https://github.com/cloudpeers/rust-libp2p", branch = "tlfs" }
