[package]
name = "tlfs-acl"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.44"
base64 = "0.13.0"
bytecheck = "0.6.5"
chacha20poly1305 = { version = "0.9.0", features = ["reduced-round"] }
crepe = "0.1.5"
ed25519-dalek = "1.0.1"
getrandom = "0.2.3"
rkyv = { version = "0.7.18", features = ["validation"] }
tlfs-crdt = { version = "0.1.0", path = "../crdt" }

[dev-dependencies]
proptest = "1.0.0"
tlfs-crdt = { version = "0.1.0", path = "../crdt", features = ["proptest"] }
