[package]
name = "tlfs-api"
version = "0.1.0"
edition = "2021"
description = "tlfs api"
repository = "https://github.com/cloudpeers/tlfs"
license = "MIT"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "tlfs"

[features]
default = ["capi", "futures"]
capi = []

[build-dependencies]
ffi-gen = "0.1.5"

[dependencies]
anyhow = "1.0.51"
ffi-gen-macro = "0.1.2"
futures = { version = "0.3.17", optional = true }
tlfs = { version = "0.1.0", path = ".." }
