[package]
name = "tlfs-cambria"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.43"
bytecheck = "0.6.5"
proptest = { version = "1.0.0", optional = true }
rkyv = { version = "0.7.14", features = ["validation"] }
tlfs-acl = { version = "0.1.0", path = "../acl" }

[dev-dependencies]
proptest = "1.0.0"
tlfs-acl = { version = "0.1.0", path = "../acl", features = ["proptest"] }
