[package]
name = "tlfs-capi"
version = "0.1.0"
edition = "2021"

[features]
capi = []

[dependencies]
anyhow = "1.0.44"
async-global-executor = "2.0.2"
ffi_helpers = "0.3.0"
libc = "0.2.105"
tlfs = { version = "0.1.0", path = ".." }

[build-dependencies]
cbindgen = "0.20.0"
tlfsc = { version = "0.1.0", path = "../tlfsc" }

[package.metadata.capi.header]
name = "tlfs"
subdirectory = false

[package.metadata.capi.pkg_config]
name = "tlfs"
filename = "tlfs"

[package.metadata.capi.library]
name = "tlfs"
