[package]
name = "relay"
version = "0.1.0"
edition = "2018"

[dependencies]
acme-lib = "0.8.2"
anyhow = "1.0.44"
clap = "3.0.0-beta.4"
hex = "0.4.3"
libp2p = { version = "0.40.0", features = [
  "noise",
  "mplex",
  "pnet",
  "metrics",
  "identify",
  "rendezvous",
  "websocket",
  "dns-tokio",
  "tcp-tokio",
  "yamux",
  "relay"
  ], default_features = false }
rustls = "0.19.1"
tokio = { version = "1.12.0", features = ["full"] }
tracing = "0.1.28"
tracing-subscriber = "0.2.24"
warp = "0.3.1"

