[package]
name = "relay"
version = "0.1.0"
edition = "2018"

[dependencies]
acme-lib = "0.8.2"
anyhow = "1.0.51"
clap = { version = "3.0.0-rc.4", features = ["derive"] }
hex = "0.4.3"
libp2p = { version = "0.41.0", features = [
  "noise",
  "mplex",
  "pnet",
  "metrics",
  "identify",
  "rendezvous",
  "websocket",
  "dns-tokio",
  "tcp-tokio",
  "yamux",
  "relay"
  ], default_features = false }
rustls-pemfile = "0.2.1"
tokio = { version = "1.14.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.3"
warp = "0.3.2"
