[package]
name = "tlfs-crdt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.51"
base64 = "0.13.0"
blake3 = "1.2.0"
bytecheck = "0.6.7"
crepe = "0.1.5"
ed25519-dalek = "1.0.1"
futures = "0.3.17"
getrandom = "0.2.3"
hex = "0.4.3"
parking_lot = "0.11.2"
rkyv = { version = "0.7.26", features = ["validation"] }
smallvec = "1.7.0"
tracing = { version = "0.1.29", default-features = false }
vec-collections = { version = "0.4.3", features = ["radixtree", "rkyv", "rkyv_validated"] }

[dev-dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
log-panics = "2.0.0"
proptest = "1.0.0"
tlfsc = { path = "../tlfsc" }
tracing-log = "0.1.2"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
