[package]
name = "tlfsc"
version = "0.1.0"
edition = "2021"
description = "tlfs schema compiler"
repository = "https://github.com/cloudpeers/tlfs"
license = "MIT"

[dependencies]
anyhow = "1.0.51"
clap = { version = "3.0.0-rc.4", features = ["derive"] }
fnv = "1.0.7"
pest = "2.1.3"
pest_derive = "2.1.0"
tlfs-crdt = { version = "0.1.0", path = "../crdt" }
