[package]
name = "wasm-ffi"
description = "WASM bindings for tlfs"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
log = "0.4.14"
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.28"
js-sys = "0.3.55"
wee_alloc = "0.4.5"
web-sys = "0.3.55"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.28"
