[package]
name = "tlfs-wasm-ffi"
description = "WASM bindings for tlfs"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
log = "0.4.14"
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.28"
js-sys = "0.3.55"
parking_lot = { version = "0.11.2", features = ["wasm-bindgen"] }
wee_alloc = "0.4.5"
web-sys = "0.3.55"
libp2p = { version = "0.41.0", features = [
  "ping",
  "gossipsub",
  "noise",
  "mplex",
  "identify",
  "rendezvous",
  "request-response",
  "yamux",
  "wasm-bindgen",
  "wasm-ext-websocket"
], default_features = false }
libp2p-webrtc = { git = "https://github.com/wngr/libp2p-webrtc" }
anyhow = "1.0.44"
futures-timer = { version = "3.0.2", features = ["wasm-bindgen"] }
instant = { version = "0.1.11", features = ["wasm-bindgen"] }
serde = { version = "1.0.130", features = ["derive"] }
void = "1.0.2"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.28"

[dependencies]
tlfs = { path = ".." }
